logs/plata.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Plata-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plata'...
Listing './lib/python3.5/site-packages/plata/contact'...
Listing './lib/python3.5/site-packages/plata/contact/migrations'...
Listing './lib/python3.5/site-packages/plata/discount'...
Listing './lib/python3.5/site-packages/plata/discount/migrations'...
Compiling './lib/python3.5/site-packages/plata/discount/models.py'...
***   File "./lib/python3.5/site-packages/plata/discount/models.py", line 127
    raise NotImplementedError, 'Unknown discount type %s' % self.type
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plata/locale'...
Listing './lib/python3.5/site-packages/plata/locale/de'...
Listing './lib/python3.5/site-packages/plata/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plata/payment'...
Listing './lib/python3.5/site-packages/plata/payment/modules'...
Compiling './lib/python3.5/site-packages/plata/payment/modules/ogone.py'...
***   File "./lib/python3.5/site-packages/plata/payment/modules/ogone.py", line 165
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plata/payment/modules/paypal.py'...
***   File "./lib/python3.5/site-packages/plata/payment/modules/paypal.py", line 151
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plata/payment/modules/postfinance.py'...
***   File "./lib/python3.5/site-packages/plata/payment/modules/postfinance.py", line 215
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plata/product'...
Listing './lib/python3.5/site-packages/plata/product/stock'...
Listing './lib/python3.5/site-packages/plata/product/stock/migrations'...
Listing './lib/python3.5/site-packages/plata/reporting'...
Listing './lib/python3.5/site-packages/plata/shop'...
Listing './lib/python3.5/site-packages/plata/shop/migrations'...
Listing './lib/python3.5/site-packages/plata/shop/templates'...
Listing './lib/python3.5/site-packages/plata/shop/templates/payment'...
Listing './lib/python3.5/site-packages/plata/shop/templates/plata'...
Listing './lib/python3.5/site-packages/plata/shop/templates/product'...
Listing './lib/python3.5/site-packages/plata/shop/templatetags'...
Compiling './lib/python3.5/site-packages/plata/shop/views.py'...
***   File "./lib/python3.5/site-packages/plata/shop/views.py", line 45
    except ValidationError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plata/tests'...
Compiling './lib/python3.5/site-packages/plata/tests/base.py'...
***   File "./lib/python3.5/site-packages/plata/tests/base.py", line 52
    except exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plata/tests/models.py'...
***   File "./lib/python3.5/site-packages/plata/tests/models.py", line 395
    except ValidationError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
